  * Moved from Connect to Bind event
  * Fixed magnatune cover download
  * Updated Player Control icons
  * Fixed podcast downloaded filename
  * Use wxBase64 functions
  * Dropped internal wxsqlite
  * Updated to wx3.0
  * Updated to gstreamer 1.0

  * Fixed some Config constructor calls

2014-02-20 0.3.7

  * Removed Flac library dependency. Now flac images are read/writen using taglib
  * Fixed compilation without external libwxsqlite support
  * Fixed audio output autoconfiguring option
  * Fixed load tracks from command line or file manager
  * Added mpris 2.2 support
  * Made Guayadeque Interface more clean
  * Removed bug that crashed guayadeque when used del in a dynamic playlist
  * Added TuneIn radio support
  * Added option to rename podcast channel name
  * Added option in Preferences -> Playback the option to write the complete output pipeline
  * Added Seeked mpris2 signal
  * Fixed amazon cover download engine

2012-02-03 0.3.5

  * Allow to select tracks from album browser zoon cover mode
  * Added load defaults in shortcuts preferences
  * Added cue support
  * Allow to change language from Preferences -> General
  * All playlists but the dynamic playlists with sort defined can be sorted
    by any criteria.
  * Added collections support. You can define as many collections as you want.

2011-05-13 0.3.1

  * Added {al1}, {au1}, {bl1} and {bu1} to lyrics panel patterns for
    lower/upper first letter of artist name and album name.
  * Added compositor and album artist to select context menus
  * Added a new panel with a tree view of the library
  * Added option to enable save ratings and playcounts to audio files
  * Changed command line behaviour to append the tracks to the playlist and
    play it if it was not already playing.
  * Sound menu integration in Ubuntu 11.04 natty
  * Added shortcuts configurable from preferences

2011-02-17 0.2.9

  * Added posibility to add more lyrics sources or edit existing ones