@@ -1,3 +1,4 @@
+  * Reduced the tabs height
   * Moved from Connect to Bind event
   * Fixed magnatune cover download
   * Updated Player Control icons
